# rusty

./: .gitignore
chess/: Main.rs  Piece.rs
fizzbuzz/: Cargo.toml
fizzbuzz/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
hello_world/: main
kata-1/: Cargo.toml
kata-1/src/: alphabet.rs  main.rs
