[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Ben Butterworth <24711048+ButterHub@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
# "0.7" is actually shorthand for "^0.7"